# slate

./: .gitignore  Cargo.toml  README.md  blog-post.md
bench/: remote-bench.sh  results-latest.md  run-ec2-bench.sh  run-hetzner-bench.sh
crates/slate-api/: Cargo.toml
crates/slate-api/src/: main.rs  worker.rs
crates/slate-bench/: Cargo.toml
crates/slate-bench/src/: main.rs
crates/slate-cli/: Cargo.toml
crates/slate-cli/src/: main.rs
crates/slate-core/: Cargo.toml
crates/slate-core/src/: cost.rs  job.rs  lib.rs  progress.rs  store_url.rs  transfer.rs
crates/slate-store/: Cargo.toml
crates/slate-store/src/: lib.rs
integrations/airflow/: README.md  pyproject.toml
integrations/airflow/apache_airflow_providers_slate/: __init__.py
integrations/airflow/apache_airflow_providers_slate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
integrations/airflow/apache_airflow_providers_slate/hooks/: slate.py
integrations/airflow/apache_airflow_providers_slate/operators/: slate.py
integrations/prefect/: README.md  pyproject.toml
integrations/prefect/prefect_slate/: __init__.py  tasks.py
integrations/prefect/prefect_slate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/python-client/: pyproject.toml
integrations/python-client/slate_sdk/: __init__.py  client.py
integrations/python-client/slate_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
