[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
object_store = { version = "0.11", features = ["aws", "gcp", "azure", "http"] }
url = "2"
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
cron = "0.12"
