[package]
name = "slate-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slate"
path = "src/main.rs"

[dependencies]
slate-core = { path = "../slate-core" }
slate-store = { path = "../slate-store" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
