[package]
name = "slate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
