[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slate-sdk"
version = "0.2.0"
description = "Python client for Slate — high-throughput data orchestrator for AI workloads"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/tsushanth/slate"
Repository = "https://github.com/tsushanth/slate"

[tool.setuptools.packages.find]
where = ["."]
include = ["slate_sdk*"]
